Not yet released (Build 2284)

- SPARQLParser: fixed prefix expansion where prefix equal to ":"
- SPARQLParser: changed default value of parameter "base" for parseQuery() from "''" to "None"; adapted func_unittest.py accordingly
- adapted a few SPARQLParser tests with non-absolute IRI expansions: these are now called with "postParseCheck=False" to avoid irrelevant assertion failures
- Moved prefix checking in module sparqlparser from method _checkIriExpansion() to _applyPrefixesAndBase()
- Fixed a problem with base IRI processing (SPARQLParser). In the process:
	- removed parameter "isdefaultbase" from _applyPrefixesAndBase()
	- moved check on absolute iri for BASE declarations from _checkBaseDecls() into _applyPrefixesAndBase() (module sparqlparser)
	- removed _checkBaseDecls from this module
- Implemented grammar and unit tests for n3parser
- Moved sparqlparser tests to new folder tests/sparqlparser
- Created folder tests/n3parser
- Parser.addElement() now takes an optional parameter denoting the parent class of the element to be created

Version 0.2.6, Build 1757

- Bug fixed in getExpansion()
- Re-implemented _checkIriExpansion (without copy() operation)

Version 0.2.5, Build 1712

- The sparqlparser function expandIri() has been renamed to getExpansion(). Its signature has changed: it now gets called with a single iri/PrefixedName/IRIREF argument.
	This is normally expected to be an element of a complete parsed query, because it needs prefixes and a base iri for expansion to be possible.
	The function returns the string which is the expansion of its argument, in the local context of the element within the query. The element itself is NOT changed.
- Added optional parameter "postCheck" to the constructor of SPARQLStruct (when called with a string to parse). When False, post-processing checks are skipped. The
	default is True. This can be useful when constructing SPARQLStruct subelements by string argument, since prefixes and base iri might not be present.